# SimpleMD

./: .gitignore  CMakeLists.txt  FEATURE_SUGGESTIONS.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  io.github.gottstaff.SimpleMD.desktop  simplemd.xml
.github/: CODEOWNERS
.github/workflows/: flatpak.yml
icons/: generate-icons.sh
packaging/arch/: .SRCINFO  PKGBUILD  simplemd-1.0.0-12-x86_64.pkg.tar.zst
packaging/arch/pkg/simplemd/: .BUILDINFO  .MTREE  .PKGINFO
packaging/arch/pkg/simplemd/usr/share/applications/: org.kde.simplemd.desktop
packaging/flatpak/: io.github.gottstaff.SimpleMD.yml  simplemd.flatpakrepo
packaging/pages/: index.html
resources/: pdf-themes.json
resources/preview/: preview.html
scripts/: build-flatpak.sh  install-manjaro.sh
src/: CMakeLists.txt  Main.qml  MarkdownEditor.qml  SplitEditor.qml  StyledScrollBar.qml  appintegration.cpp  appintegration.h  bracketmatchhighlighter.cpp  bracketmatchhighlighter.h  credentialstore.cpp  credentialstore.h  documentassets.cpp  documentassets.h  documentcontroller.cpp  documentcontroller.h  editorhelper.cpp  editorhelper.h  imageresolver.cpp  imageresolver.h  llmclient.cpp  llmclient.h  main.cpp  pdfexportthemes.cpp  pdfexportthemes.h  previewhelper.cpp  previewhelper.h  previewimagebridge.cpp  previewimagebridge.h  printhelper.cpp  printhelper.h
